KUBE/ingress-projects/awesome-2/nginx-golang-mysql/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: awesome-2
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: qamre/awsome2-frontend-backend-db:frontend-v1
          ports:
            - containerPort: 80
