KUBE/ingress-projects/awesome-2/nginx-golang-mysql/kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: awesome-2
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
