KUBE/ingress-projects/awesome-2/nginx-golang-mysql/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: awesome-2
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
