KUBE/ingress-projects/awesome-2/nginx-golang-mysql/kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: awesome-2
spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

  type: ClusterIP
