KUBE/ingress-projects/awesome-2/nginx-golang-mysql/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: awesome-2
spec:
  ingressClassName: nginx

  rules:
    - host: app2.myapp2.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
